chore: proto mockgen
